--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Letterboxed wordlist</title>
     <script src="./index.js"></script>
 </head>
@@ -13,10 +13,10 @@
     <form id="textInputForm">
         <label for="textInput">Enter the letters:</label>
 
-        <input type="text" id="top">
-        <input type="text" id="left">
-        <input type="text" id="right">
-        <input type="text" id="bottom">
+        <input type="text" id="top" />
+        <input type="text" id="left" />
+        <input type="text" id="right" />
+        <input type="text" id="bottom" />
         <button type="submit">Submit</button>
     </form>
 
@@ -24,18 +24,26 @@
 
     <script>
         async function processInput(text) {
-            await new Promise(resolve => setTimeout(resolve, 2000));
+            await new Promise((resolve) => setTimeout(resolve, 2000));
             console.log("Input text:", text);
-            let results = await get_valid_words(text)
-            document.getElementById('output').textContent = `Valid words: ${results.join("\n")}`;
+            let results = await get_valid_words(text);
+            document.getElementById("output").textContent =
+                `Valid words: ${results.join("\n")}`;
         }
 
-        document.getElementById('textInputForm').addEventListener('submit', async function (event) {
-            event.preventDefault(); // Prevent the form from submitting normally
+        document
+            .getElementById("textInputForm")
+            .addEventListener("submit", async function (event) {
+                event.preventDefault(); // Prevent the form from submitting normally
 
-            const textInput = (document.getElementById('top').value + document.getElementById('bottom').value + document.getElementById('left').value + document.getElementById('right').value).toLowerCase();
-            await processInput(textInput);
-        });
+                const textInput = (
+                    document.getElementById("top").value +
+                    document.getElementById("bottom").value +
+                    document.getElementById("left").value +
+                    document.getElementById("right").value
+                ).toLowerCase();
+                await processInput(textInput);
+            });
     </script>
 </body>
 
